--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <p>Akan Melangsungkan Persepsi pada</p>
             <div class="simply-countdown"></div>
             <a href="#home" class="btn btn-lg mt-4">Lihat</a>
+            <audio src="img/y2mate (mp3cut.net).mp3" autoplay loop></audio>
         </main>
     </section>
 
