--- a/index.html
+++ b/index.html
@@ -189,7 +189,65 @@
                       </div>
                     </div>
                   </li>
+                  <li class="timeline-inverted">
+                    <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
+                    <div class="timeline-panel">
+                      <div class="timeline-heading">
+                        <h3>Mulai Serius</h3>
+                        <span>08 Agustus 2024</span>
+                      </div>
+                      <div class="timeline-body">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt dignissimos eius laudantium, tenetur nesciunt numquam quis? Ea, minus tenetur? Eius.</p>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="timeline">
+                    <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
+                    <div class="timeline-panel">
+                      <div class="timeline-heading">
+                        <h3>Tunangan</h3>
+                        <span>31 July 2028</span>
+                      </div>
+                      <div class="timeline-body">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt dignissimos eius laudantium, tenetur nesciunt numquam quis? Ea, minus tenetur? Eius.</p>
+                      </div>
+                    </div>
+                  </li>
                 </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="gallery" class="gallery">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-8 col-10 text-center">
+              <span>Memory kisah Kami</span>
+              <h2 class="pt-4">Gallery Photo</h2>
+              <p class="pb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat iste a vitae tenetur suscipit voluptatum repellat laboriosam quisquam sequi qui.</p>
+            </div>
+            <div class="row row-cols-md-4 row-cols-sm-2 row-cols-1">
+              <div class="col mt-3">
+                <a href="https://picsum.photos/id/500/1302/968">
+                  <img src="https://picsum.photos/id/500/500/500" alt="" class="img-fluid w-100 rounded">
+                </a>
+              </div>
+              <div class="col mt-3">
+                <a href="https://picsum.photos/id/400/1200/768">
+                  <img src="https://picsum.photos/id/400/400/400" alt="" class="img-fluid w-100 rounded">
+                </a>
+              </div>
+              <div class="col mt-3">
+                <a href="https://picsum.photos/id/700/576">
+                  <img src="https://picsum.photos/id/700/700" alt="" class="img-fluid w-100 rounded">
+                </a>
+              </div>
+              <div class="col mt-3">
+                <a href="https://picsum.photos/id/800/576">
+                  <img src="https://picsum.photos/id/800/800" alt="" class="img-fluid w-100 rounded">
+                </a>
               </div>
             </div>
           </div>
